syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.skywalking.apm.network.trace.proto";

import "Downstream.proto";

service TraceSegmentService {
    rpc collect (stream TraceSegmentObject) returns (Downstream) {
    }
}

message TraceSegmentObject {
    string traceId = 1;
}
